--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=test.net;User Id=root;Password=password;"
+    "DefaultConnection": "Server=127.0.0.1, 3306;Database=test;user id=root;password=password;"
   }
 }
