switch DB to mysql

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1:3306;Database=test;user id=root;password=password;"
+    "DefaultConnection": "server=localhost;user=root;password=password;database=test;"
   }
 }
