--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1:3306;Database=test;user id=root;password=password;"
+    "DefaultConnection": "Server=127.0.0.1, 3306;Database=test;user id=root;password=password;"
   }
 }
